--- a/apps/tst/templates/index.html
+++ b/apps/tst/templates/index.html
@@ -2,4 +2,13 @@
 <div>
     [[=content]]
 </div>
+<div>
+    Independent
+    <a href="[[=URL('todo')]]" style='font-size: 20px;'>
+         todo-app
+    </a>
+    mounted as part of this app
+</div>
+
+
 
