fix child-app access

--- a/apps/tst/templates/index.html
+++ b/apps/tst/templates/index.html
@@ -9,6 +9,11 @@
     </a>
     mounted as part of this app
 </div>
+<div>
+    <a href="[[=app['todo'].URL(':api')]]">
+        app['todo'].URL(':api')
+    </a>
+</div>
 
 
 
