--- a/apps/examples/templates/socketio/index.html
+++ b/apps/examples/templates/socketio/index.html
@@ -7,20 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <h3>python-socketio (v5) + socket.io.js (v3)</h3>
+    <h3>python-socketio (v5) + socket.io.js (v4)</h3>
+<h3>tested with tornado, aiohttp  socketio-servers py4web/utils/wsservers.py.txt</h3>
 
     <form id="form" action="">
       <input id="message" autocomplete="off" style="width: 50%;" />
        <div><button>Send to py4web</button></div>
     </form>
     <ul id="messages"></ul>
-    <script src="https://cdn.socket.io/3.1.1/socket.io.min.js"></script>
+    <script src="https://cdn.socket.io/4.3.2/socket.io.min.js"></script>
     <script>
 
       // https://socket.io/get-started/chat
       // https://socket.io/docs/client-api/#With-custom-path
 
-      const socket = io('http://localhost:8000');
+
+
+      const socket = io('[[=sio_url ]]');
+      //onst socket = io(   'http://localhost:8000'    );
 
       socket.on("connect", () => {
         console.log("A user is connected!");
