fixed menu in feedbook

--- a/apps/fadebook/templates/layout.html
+++ b/apps/fadebook/templates/layout.html
@@ -30,7 +30,7 @@
         <!-- Right menu ul/li -->
         <ul>
 	  [[if globals().get('user'):]]
-	  <li><a href="[[=URL('index')]]">My feed</a></li>
+	  <li><a href="[[=URL('feed')]]">My feed</a></li>
 	  <li><a href="[[=URL('home', user['id'])]]">My Home</a></li>
 	  <li><a href="[[=URL('friends')]]">Search Friends</a></li>
           <li>
