--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -107,6 +107,11 @@
     <td><a role="button" href="[[=URL('tagsinput_form')]]">example</a></td>
   </tr>
   <tr>
+    <td>A page with form using hCaptcha</td>
+    <td><a role="button" href="[[=URL('hcaptcha_form')]]">example</a></td>
+  </tr>
+  <tr>
+  <tr>
     <th colspan="2" class="is-info">Grid (no vue.js)</th>
   </tr>
   <tr>
