--- a/apps/examples/templates/index.html
+++ b/apps/examples/templates/index.html
@@ -133,24 +133,8 @@
     <th colspan="2" class="is-info">Py4web Component Examples (no.css)</th>
   </tr>
   <tr>
-    <td>Sample Vue.js client-side grid.  Subclass components.grid.Grid to tailor.</td>
-    <td><a role="button" href="[[=URL('vuegrid')]]">example</a></td>
-  </tr>
-  <tr>
     <td>Javascript file uploader.  Subclass components.fileupload.FileUpload to tailor.</td>
     <td><a role="button" href="[[=URL('file_uploader')]]">example</a></td>
-  </tr>
-  <tr>
-    <td>Custom Vue form.  Subclass components.vueform.VueForm to tailor.</td>
-    <td><a role="button" href="[[=URL('vue_form')]]">example</a></td>
-  </tr>
-  <tr>
-    <td>Insertion form in Vue.  Subclass components.vueform.InsertForm to tailor.</td>
-    <td><a role="button" href="[[=URL('insert_form')]]">example</a></td>
-  </tr>
-  <tr>
-    <td>Update form in Vue.  Subclass components.vueform.TableForm to tailor.</td>
-    <td><a role="button" href="[[=URL('update_form')]]">example</a></td>
   </tr>
   <tr>
     <td>Star rating component in Vue; example of component instantiation from Vue.
@@ -165,16 +149,9 @@
     <td><a role="button" href="[[=URL('vuegrid_bulma')]]">example</a></td>
   </tr>
   <tr>
-    <td>Custom Vue form using Bulma css.  Subclass components.vueform.VueForm to tailor.</td>
-    <td><a role="button" href="[[=URL('vue_form_bulma')]]">example</a></td>
-  </tr>
-  <tr>
-    <td>Insertion form in Vue, using Bulma css.  Subclass components.vueform.InsertForm to tailor.</td>
-    <td><a role="button" href="[[=URL('insert_form_bulma')]]">example</a></td>
-  </tr>
-  <tr>
-    <td>Update form in Vue, using Bluma css.  Subclass components.vueform.TableForm to tailor.</td>
-    <td><a role="button" href="[[=URL('update_form_bulma')]]">example</a></td>
+    <td>A demonstration of grid and forms implemented via Vue components.
+      Subclass components.grid.Grid and components.vueform.VueForm to tailor.</td>
+    <td><a role="button" href="[[=URL('vue_grid_and_forms')]]">example</a></td>
   </tr>
   <tr>
     <td>Star rating component in Vue using Bulma css; example of component instantiation from Vue.
