--- a/apps/examples/static/components/grid/grid.html
+++ b/apps/examples/static/components/grid/grid.html
@@ -1,54 +1,79 @@
-<div>
+<div class="section">
   <div v-if="rows.length > 0" class="grid">
+    <!-- Model to confirm deletions -->
+    <div class="modal" :class="{'is-active': confirm_delete_active}">
+      <div class="modal-background"></div>
+      <div class="modal-content">
+        <div class="block has-text-white">Confirm delete: {{confirm_delete_text}}</div>
+        <div class="block">
+          <button @click="delete_confirm" class="button is-danger">Delete</button>
+          <button @click="delete_cancel" class="button is-warning">Cancel</button>
+        </div>
+      </div>
+      <button class="modal-close is-large" aria-label="close"></button>
+    </div>
     <!-- Search bar -->
-    <table>
-      <tbody>
-        <tr>
-          <td class="control">
-          <input type="text"  class="input" v-model="search_text" @keydown="search_enter" :placeholder="search_placeholder" style="width: 100%;">
-          </td> <td style="white-space: nowrap; width: 10%; padding-left: 5px;">
-            <button @click="clear_search" style="height:34px"><i class="fa fa-times-circle"></i></button>
-            <button @click="do_search" style="height:34px"><i class="fa fa-search"></i> Search</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-
+    <div v-if="has_search" class="level">
+      <div class="field is-grouped" style="width:100%">
+        <div class="control is-expanded">
+          <div class="field has-addons is-expanded">
+            <div class="control is-expanded is-fullwidth">
+              <input class="input search" type="text" v-model="search_text" @keydown="search_enter" :placeholder="search_placeholder">
+            </div>
+            <div class="control">
+              <button class="button has-text-grey" @click="clear_search">
+                <i class="fa fa-times-circle"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="control">
+          <button class="button is-info" @click="do_search">
+            <i class="fa fa-search"></i>
+          </button>
+        </div>
+      </div>
+    </div>
     <!-- Table -->
-    <table>
-      <tbody>
-        <tr v-for="row in rows">
-          <template v-if="row.is_header">
-            <!-- Header row -->
-            <th v-for="cell in row.cells" :class="{'clickable': cell.sortable, 'has-text-link': cell.sortable}" @click="do_sort(cell._idx)">
-              <i v-if="cell.sortable && cell.sort > 0" class="fa fa-sort-asc"></i>
-              <i v-if="cell.sortable && cell.sort < 0" class="fa fa-sort-desc"></i>
-              <i v-if="cell.sortable && cell.sort === 0" class="fa fa-sort"></i>
-              {{cell.text}}
-            </th>
-          </template>
-          <template v-else>
-            <!-- Non-header row -->
-            <td v-for="cell in row.cells"  :class="cell.el_class">
-              <a v-if="cell.url" :href="cell.url">
-                <button v-if="cell.is_button">
-                  {{cell.text}}
-                </button>
-                <span v-else>{{cell.text}}</span>
-              </a>
+    <table class="table is-striped is-fullwidth">
+      <tr v-for="row in rows">
+        <template v-if="row.is_header">
+          <!-- Header row -->
+          <th v-for="cell in row.cells" :class="{'clickable': cell.sortable, 'has-text-link': cell.sortable}" @click="do_sort(cell._idx)">
+            <i v-if="cell.sortable && cell.sort > 0" class="fa fa-sort-asc"></i>
+            <i v-if="cell.sortable && cell.sort < 0" class="fa fa-sort-desc"></i>
+            <i v-if="cell.sortable && cell.sort === 0" class="fa fa-sort"></i>
+            {{cell.text}}
+          </th>
+          <th v-if="has_delete"></th>
+        </template>
+        <template v-else>
+          <!-- Non-header row -->
+          <td v-for="cell in row.cells"  :class="cell.el_class">
+            <button v-if="cell.is_button" class="button">
+              <a v-if="cell.url" :href="cell.url">{{cell.text}}</a>
               <span v-else>{{cell.text}}</span>
-            </td>
-          </template>
-        </tr>
-      </tbody>
+            </button>
+            <template v-else>
+              <a v-if="cell.url" :href="cell.url">{{cell.text}}</a>
+              <span v-else>{{cell.text}}</span>
+            </template>
+          </td>
+          <td v-if="row.has_delete">
+            <a><i @click="delete_row(row._idx)" class="fa fa-trash"></i></a>
+          </td>
+        </template>
+      </tr>
     </table>
-    <div class="pagination is-pulled-right">
-      <span :class="{disabled: !has_previous}" @click="incpage(-1)">
-        <i class="fa fa-chevron-left"></i>
-      </span>
-      <span class="grid_page_number">{{page}}</span>
-      <span :class="{disabled: !has_more}" @click="incpage(1)">
-        <i class="fa fa-chevron-right"></i>
+    <div class="pagination">
+      <span class="pagination-symbols">
+        <span :class="{disabled: !has_previous}" @click="incpage(-1)">
+          <i class="fa fa-chevron-left"></i>
+        </span>
+        <span class="grid_page_number">{{page}}</span>
+        <span :class="{disabled: !has_more}" @click="incpage(1)">
+          <i class="fa fa-chevron-right"></i>
+        </span>
       </span>
     </div>
   </div>
