--- a/apps/examples/templates/vue_grid_and_forms.html
+++ b/apps/examples/templates/vue_grid_and_forms.html
@@ -6,6 +6,12 @@
 
 <div id="vue">
   <h2 class="title">Grid</h2>
+  <a class="button is-success" href="[[=URL('insert_form_vue')]]">
+    <span class="icon is-small">
+      <i class="fa fa-plus"></i>
+    </span>
+    <span>Insert</span>
+  </a>
   [[=grid]]
 </div>
 
