--- a/apps/examples/templates/view_form.html
+++ b/apps/examples/templates/view_form.html
@@ -10,6 +10,7 @@
 </div>
 
 [[block page_scripts]]
+<script src="[[=URL('static/components-bulma/vueform/luxon.js')]]"></script>
 <script src="[[=URL('static/components-bulma/vueform/vueform.js')]]"></script>
 <script>
   var app = new Vue({
