Ok, now it seems to finally work

--- a/apps/examples/templates/vue_grid_and_forms.html
+++ b/apps/examples/templates/vue_grid_and_forms.html
@@ -5,6 +5,7 @@
 [[end]]
 
 <div id="vue">
+  <section class="section">
   <h2 class="title">Grid</h2>
   <a class="button is-success" href="[[=URL('insert_form_vue')]]">
     <span class="icon is-small">
@@ -12,6 +13,7 @@
     </span>
     <span>Insert</span>
   </a>
+  </section>
   [[=grid]]
 </div>
 
