Better grid component

--- a/apps/examples/templates/star_rater_vue_bulma.html
+++ b/apps/examples/templates/star_rater_vue_bulma.html
@@ -8,7 +8,7 @@
   <div class="section">
   <div v-for="post in posts" class="box">
       <p>{{post.content}}</p>
-      <starrater :url="post.url">
+      <starrater :url="post.stars_callback_url">
   </div>
 </div>
 
