--- a/apps/examples/templates/vue_grid_and_forms.html
+++ b/apps/examples/templates/vue_grid_and_forms.html
@@ -19,6 +19,7 @@
 
 [[block page_scripts]]
 <script src="[[=URL('static/components-bulma/grid/grid.js')]]"></script>
+<script src="[[=URL('static/components-bulma/grid/luxon.js')]]"></script>
 <script>
   var app = new Vue({
       el: "#vue",
