--- a/apps/examples/templates/star_rater_vue.html
+++ b/apps/examples/templates/star_rater_vue.html
@@ -8,7 +8,7 @@
   <div>
   <div v-for="post in posts">
     <p>{{post.content}}</p>
-    <starrater :url="post.url">
+      <starrater :url="post.stars_callback_url">
   </div>
 </div>
 
