--- a/apps/examples/templates/insert_form.html
+++ b/apps/examples/templates/insert_form.html
@@ -5,12 +5,13 @@
 [[end]]
 
 <div id="vue">
+  <h2 class="title">Insert Form</h2>
   [[=form]]
 </div>
 
 [[block page_scripts]]
-<script src="components-bulma/vueform/luxon.min.js"></script>
-<script src="components-bulma/vueform/vueform.js"></script>
+<script src="[[=URL('static/components-bulma/vueform/luxon.js')]]"></script>
+<script src="[[=URL('static/components-bulma/vueform/vueform.js')]]"></script>
 <script>
   var app = new Vue({
       el: "#vue",
