json rpc example

--- a/apps/showcase/templates/index.html
+++ b/apps/showcase/templates/index.html
@@ -63,6 +63,13 @@
       <td><a role="button" href="[[=URL('show/examples/example_helpers')]]">example</a></td>
     </tr>
     <tr>
+      <th colspan="2" class="is-info">Services</th>
+    </tr>
+    <tr>
+      <td>Json RPC Client/Server</td>
+      <td><a role="button" href="[[=URL('show/examples/rpc')]]">example</a></td>
+    </tr>
+    <tr>
       <th colspan="2" class="is-info">Internationalization and Pluralization</th>
     </tr>
     <tr>
