added rest example

--- a/apps/showcase/templates/index.html
+++ b/apps/showcase/templates/index.html
@@ -66,6 +66,10 @@
       <th colspan="2" class="is-info">Services</th>
     </tr>
     <tr>
+      <td>Generic REST API</td>
+      <td><a role="button" href="[[=URL('show/examples/rest')]]">example</a></td>
+    </tr>
+    <tr>
       <td>Json RPC Client/Server</td>
       <td><a role="button" href="[[=URL('show/examples/rpc')]]">example</a></td>
     </tr>
