fixed minor grid problems

--- a/apps/showcase/templates/examples/custom_form.html
+++ b/apps/showcase/templates/examples/custom_form.html
@@ -1,4 +1,4 @@
-[[extend 'examples/layout.html']]
+[[extend 'layout.html']]
 
 <h2 class="title">Form Superhero Identity (Custom) </h2>
 [[= form.custom.begin ]]
