--- a/apps/showcase/templates/examples/flash_example.html
+++ b/apps/showcase/templates/examples/flash_example.html
@@ -1,4 +1,4 @@
-[[extend 'examples/layout.html']]
+[[extend 'layout.html']]
 
 <button onclick="Q.flash({message: 'you clicked the button', class:'warning'})">Click me</button>
 <br/>or type something below<br/>
