--- a/apps/showcase/templates/examples/component_loader.html
+++ b/apps/showcase/templates/examples/component_loader.html
@@ -1,4 +1,4 @@
-[[extend 'examples/layout.html']]
+[[extend 'layout.html']]
 
 <ajax-component id="component_1" url="[[=URL('mycomponent.load')]]">
     <blink>Loading...</blink>
