--- a/apps/showcase/templates/examples/html_grid.html
+++ b/apps/showcase/templates/examples/html_grid.html
@@ -1,12 +1,7 @@
-[[extend 'examples/layout.html']]
+[[extend 'layout.html']]
 
 <h2 class="title">examples/Pure.html Grid</h2>
 <div class="container" style="padding-top: 1em;">
-    [[if 'action' in request.url_args and request.url_args['action'] in ['details', 'edit']:]]
-        [[form = grid.render()]]
-        [[=form]]
-    [[else:]]
-        [[=grid.render()]]
-    [[pass]]
+  [[=grid]]
 </div>
 
