--- a/apps/_dashboard/templates/index.html
+++ b/apps/_dashboard/templates/index.html
@@ -253,9 +253,8 @@
 
     </div>
 </body>
-<script src="js/sugar.min.js"></script>
+<!--script src="js/sugar.min.js"></script-->
 <script src="js/vue.min.js"></script>
-<script src="js/axios.min.js"></script>
 <script src="js/ace/ace.js"></script>
 <script src="js/ace/ext-modelist.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/utils.js"></script>
