fixed issue with form.structure resetting form and fixed showcase for update_form

--- a/apps/showcase/templates/show.html
+++ b/apps/showcase/templates/show.html
@@ -5,7 +5,7 @@
 
 <a role="button" href="../index">Back to Examples</a>
 [[if executable:]]
-<a role="button" href="../[[=name]]">Run Example</a>
+<a role="button" href="../[[=path]]">Run Example</a>
 [[else:]]
 Run this application locally to try examples
 [[pass]]
