fixed fadebook app with latest fonts

--- a/apps/fadebook/templates/posts.html
+++ b/apps/fadebook/templates/posts.html
@@ -6,14 +6,15 @@
   </a>
   on [[=item.created_on]] says
   <blockquote>[[=item.body]]</blockquote>
-  <i class="fa fa-thumbs-up" data-id="[[=item.id]]" data-liked="[[=item.liked]]" onclick="like(this)"></i>
+  <i class="fa-solid fa-thumbs-up" data-url="[[=URL('like',item.id)]]" data-liked="[[=item.liked]]" onclick="like(this)"></i>
 </div>
 [[pass]]
 
 <script>
   function like(element) {
-      Q.post("../like/"+element.dataset.id).then(function(res){
-	  element.dataset.liked = res.json().liked;
+      // post to the url specified and element's data-url and change the load status
+      Q.post(element.dataset.url).then(function(res){
+	      element.dataset.liked = res.json().liked;
       });
   }
 </Script>
