--- a/apps/fadebook/templates/layout.html
+++ b/apps/fadebook/templates/layout.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="data:image/x-icon;base64,AAABAAEAAQEAAAEAIAAwAAAAFgAAACgAAAABAAAAAgAAAAEAIAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAPAAAAAA=="/>
     <link rel="stylesheet" href="css/no.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <style>
       .py4web-validation-error{margin-top:-16px; font-size:0.8em;color:red}
       .post {padding:5px; margin-bottom:10px; background:#f1f1f1;}
-      .fa-thumbs-up[data-liked="true"] {color: black;}
-      .fa-thumbs-up[data-liked="false"] {color: white;}
+      .fa-thumbs-up[data-liked="true"] {opacity: 1.0;}
+      .fa-thumbs-up[data-liked="false"] {opacity: 0.3;}
     </style>
     [[block page_head]]<!-- individual pages can customize header here -->[[end]]
   </head>
