overview.html and new prism and re-enabled showcase

--- a/apps/_default/templates/index.html
+++ b/apps/_default/templates/index.html
@@ -27,6 +27,7 @@
       <img class="logo" src="[[=URL("static/images/logo.png")]]"/>
       <h1>PY4WEB</h1>
       <h2>Different, yet cute, and a memorable evolutionary step.</h2>
+      <a href="/showcase/static/overview.html">Quick Overview</a>
       <a href="/_dashboard">Dashboard</a>
       <a href="/_documentation?version=[[=version]]">Documentation</a>
       <a href="/showcase">Examples</a>
