added links to more apps

--- a/apps/showcase/templates/index.html
+++ b/apps/showcase/templates/index.html
@@ -1,7 +1,21 @@
 [[extend 'layout.html']]
 
+
+
 <div id="vue">
+
   <table class="table">
+    <tr style="background:#e1e1e1">
+      <th colspan="2" class="is-info">Complete Example Apps</th>      
+    </tr>
+    <tr>
+      <td colspan="2">
+	<a href="https://github.com/web2py/py4web/tree/master/apps/todo">Start with a Todo app</a><br/>    
+	<a href="https://github.com/web2py/py4web/tree/master/apps/fadebook">A minimalist Facebook clone</a><br/>
+	<a href="https://github.com/web2py/py4web/tree/master/apps/tagged_posts">A minimalist Twitter clone</a><br/>
+	<a href="https://github.com/ali96343/facep4w">More third party contributed apps...</a>
+      </td>
+    </tr>
     <tr style="background:#e1e1e1">
       <th colspan="2" class="is-info">Simple Serverside Examples</th>      
     </tr>
