fixed typos, thank Ali

--- a/apps/showcase/templates/index.html
+++ b/apps/showcase/templates/index.html
@@ -52,7 +52,7 @@
       <td><a role="button" href="[[=URL('show/examples/page_with_postback')]]">example</a></td>
     </tr>
     <tr>
-      <th colspan="2" class="is-info">Fixtues: Flash</th>
+      <th colspan="2" class="is-info">Fixtures: Flash</th>
     </tr>
     <tr>
       <td>A page with a flash (clientside only)</td>
@@ -63,7 +63,7 @@
       <td><a role="button" href="[[=URL('show/examples/flash_example_fixture')]]">example</a></td>
     </tr>
     <tr>
-      <th colspan="2" class="is-info">Fixtues: Session</th>
+      <th colspan="2" class="is-info">Fixtures: Session</th>
     </tr>
     <tr>
       <td>A page with a counter</td>
