Added: GridClassStyle to py4web.utils.grid and FormStyleFactory to py4web.utils.form. Added page_with_tailwindcss example to showcase/examples. Added storage_tailwindcss.sqlite to showcase/databases

--- a/apps/showcase/templates/index.html
+++ b/apps/showcase/templates/index.html
@@ -28,6 +28,10 @@
       <td><a role="button" href="[[=URL('show/examples/page_with_template')]]">example</a></td>
     </tr>
     <tr>
+      <td>A normal page with Tailwindcss</td>
+      <td><a role="button" href="[[=URL('show/examples/page_with_tailwindcss')]]">example</a></td>
+    </tr>
+    <tr>
       <td>A page causing an internal error</td>
       <td><a role="button" href="[[=URL('show/examples/page_with_error')]]">example</a></td>
     </tr>
