--- a/apps/_dashboard/templates/layout.html
+++ b/apps/_dashboard/templates/layout.html
@@ -36,7 +36,7 @@
       </nav>
     </header>
     <!-- beginning of HTML inserted by extending template -->
-    <div>
+    <center>
       <div>
         <!-- Flash alert messages, first optional one in data-alert -->
         <flash-alerts class="padded" data-alert="[[=globals().get('flash','')]]"></flash-alerts>
@@ -45,7 +45,7 @@
         <!-- contect injected by extending page -->
         [[include]]
       </main>
-    </div>
+    </center>
     <!-- end of HTML inserted by extending template -->
     <footer class="black padded">
       <p>
