yet simpler grid

--- a/apps/_dashboard/templates/layout.html
+++ b/apps/_dashboard/templates/layout.html
@@ -23,6 +23,7 @@
     .grid-search-form {width:100%; max-width: 100%}
     tbody tr:hover { background-color:#002233 }
     .grid-search-form-tr {border-bottom: none}
+    .grid-td:last-child {text-align: right}
     </style>
     [[block page_head]]<!-- individual pages can customize header here -->[[end]]
   </head>
