Showcase app: fix AttributeError with "pure html grid" example  when editing/viewing records

--- a/apps/showcase/templates/index.html
+++ b/apps/showcase/templates/index.html
@@ -167,20 +167,20 @@
       <td><a role="button" href="[[=URL('show/vue_components_examples/vue_file_uploader')]]">example</a></td>
     </tr>
     <tr>
-      <td>Insertion form in Vue.</td>
+      <td>Grid + Forms in Vue.</td>
+      <td><a role="button" href="[[=URL('show/vue_components_examples/vue_grid_and_forms')]]">example</a></td>
+    </tr>
+    <tr>
+      <td>Grid + Forms in Vue - Insertion.</td>
       <td><a role="button" href="[[=URL('show/vue_components_examples/vue_insert_form')]]">example</a></td>
     </tr>
     <tr>
-      <td>Update form in Vue.</td>
-      <td><a role="button" href="[[=URL('show/vue_components_examples/vue_edit_form/1')]]">example</a></td>
-    </tr>
-    <tr>
-      <td>View form in Vue.</td>
+      <td>Grid + Forms in Vue - View form (gives 403 error if launched outside grid).</td>
       <td><a role="button" href="[[=URL('show/vue_components_examples/vue_view_form/1')]]">example</a></td>
     </tr>
     <tr>
-      <td>Grid + Forms in Vue.</td>
-      <td><a role="button" href="[[=URL('show/vue_components_examples/vue_grid_and_forms')]]">example</a></td>
+      <td>Grid + Forms in Vue - Update form (gives 403 error if launched outside grid).</td>
+      <td><a role="button" href="[[=URL('show/vue_components_examples/vue_edit_form/1')]]">example</a></td>
     </tr>
     <tr>
       <td>Star rating component in Vue; example of component instantiation from Vue.</td>
