--- a/apps/todo/templates/layout.html
+++ b/apps/todo/templates/layout.html
@@ -2,7 +2,7 @@
 <html>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="data:image/x-icon;base64,AAABAAEAAQEAAAEAIAAwAAAAFgAAACgAAAABAAAAAgAAAAEAIAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAPAAAAAA=="/>
-  <link rel="stylesheet" href="[[=URL('static/css/bulma.css')]]">
+  <link rel="stylesheet" href="[[=URL('static/css/bulma.min.css')]]">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <body>
     <section class="section">
@@ -13,12 +13,12 @@
     [[include]]
     <footer class="footer">
       <div class="content has-text-centered">
-        I was made with py4web (prototype), vue.js, and bulma.css
+        I was made with py4web, vue3.js, and bulma.css
       </div>
     </footer>
   </body>
   <script src="[[=URL('static/js/sugar.min.js')]]"></script>  
-  <script src="[[=URL('static/js/vue.min.js')]]"></script> 
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="[[=URL('static/js/utils.js')]]"></script> 
   <script src="[[=URL('static/js/todo.js')]]"></script> 
 </html>
